# env-gen

./: .gitignore  README.md  main.py  pyproject.toml
.history/: .env_20251017022309  main_20251016201453.py  main_20251016201553.py  main_20251016201557.py  main_20251016202306.py  main_20251016202633.py  main_20251016202713.py  main_20251016202720.py  main_20251016202929.py  main_20251016202937.py  main_20251016202944.py  main_20251016202951.py  main_20251016202954.py  main_20251016203120.py  main_20251016203127.py  main_20251016203207.py  main_20251016203522.py  main_20251016203542.py  main_20251016203946.py  main_20251016204013.py  main_20251016204016.py  main_20251016204215.py  main_20251016204306.py  main_20251016204336.py  main_20251016204430.py  main_20251016204439.py  main_20251016204513.py  main_20251016204624.py  main_20251016204627.py  main_20251016204719.py  main_20251016204746.py  main_20251016204904.py  main_20251016204910.py  main_20251016204939.py  main_20251016204952.py  main_20251016205458.py  main_20251016205516.py  main_20251016205527.py  main_20251016205549.py  main_20251016205921.py  (+9 more)
docs/: CLI_REFERENCE.md  OBSERVABILITY.md  OBSERVABILITY_EXAMPLE.md
mcp_servers/: 0002.@upstash_context7-mcp_labeled.json  0007.@GongRzhe_Office-Word-MCP-Server_labeled.json  0020.@cloudflare_playwright-mcp_labeled.json  0026.@PhillipRt_think-mcp-server_labeled.json  0033.@hamid-vakilzadeh_mcpsemanticscholar_labeled.json  0039.@yokingma_time-mcp_labeled.json  0044.@falahgs_flux-imagegen-mcp-server_labeled.json  0046.@mikechao_metmuseum-mcp_labeled.json  (+1058 more)
(+1186 files in other folders)
